<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:hint="@string/firstName"
        android:textSize="20sp"
        android:maxLength="50"
        android:inputType="text"
        android:padding="15dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_contact_style"
        android:drawablePadding="12dp"
        android:background="@drawable/edittext_style"
        android:autofillHints="name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/middleName"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/middleName"
        android:hint="@string/middleName"
        android:textSize="20sp"
        android:maxLength="50"
        android:inputType="text"
        android:padding="15dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_contact_style"
        android:drawablePadding="12dp"
        android:background="@drawable/edittext_style"
        android:autofillHints="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toTopOf="@id/lastName"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/lastName"
        android:hint="@string/lastName"
        android:textSize="20sp"
        android:maxLength="50"
        android:inputType="text"
        android:padding="15dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_contact_style"
        android:drawablePadding="12dp"
        android:background="@drawable/edittext_style"
        android:autofillHints="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middleName"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/login"
        android:hint="@string/login"
        android:textSize="20sp"
        android:maxLength="50"
        android:inputType="text"
        android:padding="15dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_email_style"
        android:drawablePadding="12dp"
        android:background="@drawable/edittext_style"
        android:autofillHints="emailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:textSize="20sp"
        android:maxLength="50"
        android:inputType="textPassword"
        android:padding="15dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_password_style"
        android:drawablePadding="12dp"
        android:background="@drawable/edittext_style"
        android:autofillHints="password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/signUpButton"
        android:text="@string/reg"
        android:textSize="20sp"
        android:textColor="?attr/colorSecondary"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>