<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:elevation="50dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/header"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorSecondary"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/description"
                    android:textSize="25sp"
                    android:textColor="?attr/colorSecondary"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/owner"
                    android:text="@string/owner"
                    android:textSize="25sp"
                    android:textColor="?attr/colorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dateOfUpdater"/>

                <TextView
                    android:id="@+id/responsible"
                    android:text="@string/responsible"
                    android:textSize="25sp"
                    android:textColor="?attr/colorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dateOfCreation"/>

                <TextView
                    android:id="@+id/priority"
                    android:text="@string/priority"
                    android:textSize="25sp"
                    android:textColor="?attr/colorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/deadline"/>

                <TextView
                    android:id="@+id/status"
                    android:text="@string/status"
                    android:textSize="25sp"
                    android:textColor="?attr/colorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/priority"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/dateOfUpdater"
                    android:text="@string/dateOfUpdater"
                    android:textSize="25sp"
                    android:textColor="?attr/colorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/dateOfCreation"
                    android:text="@string/dateOfCreation"
                    android:textSize="25sp"
                    android:textColor="?attr/colorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@id/owner"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/deadline"
                    android:text="@string/deadline"
                    android:textSize="25sp"
                    android:textColor="?attr/colorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/responsible"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toBottomOf="@id/status"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/editStatusButton"
            android:text="@string/editStatus"
            android:textSize="20sp"
            android:textColor="?attr/colorSecondary"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTaskButton"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/editTaskButton"
            android:text="@string/change"
            android:textSize="20sp"
            android:textColor="?attr/colorSecondary"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:visibility="invisible"
            android:background="@drawable/button_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/deleteButton"
            app:layout_constraintTop_toBottomOf="@id/editStatusButton"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/deleteButton"
            android:text="@string/delete"
            android:textSize="20sp"
            android:textColor="?attr/colorSecondary"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:visibility="invisible"
            android:background="@drawable/button_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTaskButton"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/deleteButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>