<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:elevation="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="?attr/colorSecondaryVariant"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/header"
                    android:hint="@string/title"
                    android:textSize="20sp"
                    android:textColor="?attr/colorOnSecondary"
                    android:textAlignment="center"
                    android:padding="15dp"
                    android:inputType="text"
                    android:background="@drawable/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:importantForAutofill="no"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/description"
                    android:hint="@string/description"
                    android:textSize="20sp"
                    android:textColor="?attr/colorOnSecondary"
                    android:textAlignment="center"
                    android:padding="15dp"
                    android:inputType="text"
                    android:background="@drawable/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:importantForAutofill="no"
                    app:layout_constraintTop_toBottomOf="@id/header"/>

                <TextView
                    android:text="@string/deadline"
                    android:textColor="?attr/colorOnSecondary"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/deadline"/>

                <DatePicker
                    android:id="@+id/deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:text="@string/responsible"
                    android:textColor="?attr/colorOnSecondary"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/responsible"/>

                <Spinner
                    android:id="@+id/responsible"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/deadline"/>

                <TextView
                    android:text="@string/priority"
                    android:textColor="?attr/colorOnSecondary"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/priority"/>

                <Spinner
                    android:id="@+id/priority"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/responsible"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toBottomOf="@id/priority"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/editButton"
            android:text="@string/editTask"
            android:textSize="20sp"
            android:textColor="?attr/colorSecondary"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintRight_toRightOf="parent"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/editButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>